End of Section 12

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,6 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection" : "Data Source=reactivities.db"
-  }
+    "DefaultConnection": "Data Source=reactivities.db"
+  },
+  "TokenKey": "super duper secret key super duper secret key super duper secret key super duper secret key super duper secret key super duper secret key super duper secret key super duper secret key"
 }
