--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost; Port=5432; User Id=postgres; Password=93bfbf93; Database=Reactivities "
+    "DefaultConnection": "Server=localhost; Port=5432; User Id=admin; Password=secret; Database=Reactivities "
   },
   "TokenKey": "super duper secret key super duper secret key super duper secret key super duper secret key super duper secret key super duper secret key super duper secret key super duper secret key"
 }
