--- a/fly.toml
+++ b/fly.toml
@@ -3,25 +3,46 @@
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = "bf-reactivities"
-primary_region = "den"
+
+app = "reactivities-course"
+kill_signal = "SIGINT"
+kill_timeout = 5
+processes = []
 
 [build]
   image = "brianfreestone/reactivities:latest"
 
 [env]
-  ASPNETCORE_URLS="http://+:8080" 
+  ASPNETCORE_URLS="http://+:8080"
   Cloudinary__CloudName="djtiarvob"
   Cloudinary__ApiKey="792922793581426"
 
+[experimental]
+  allowed_public_ports = []
+  auto_rollback = true
+
 [[services]]
   http_checks = []
-  processes=["app"]
-
-[http_service]
   internal_port = 8080
-  force_https = true
-  auto_stop_machines = true
-  auto_start_machines = true
-  min_machines_running = 0
   processes = ["app"]
+  protocol = "tcp"
+  script_checks = []
+  [services.concurrency]
+    hard_limit = 25
+    soft_limit = 20
+    type = "connections"
+
+  [[services.ports]]
+    force_https = true
+    handlers = ["http"]
+    port = 80
+
+  [[services.ports]]
+    handlers = ["tls", "http"]
+    port = 443
+
+  [[services.tcp_checks]]
+    grace_period = "1s"
+    interval = "15s"
+    restart_limit = 0
+    timeout = "2s"
