--- a/fly.toml
+++ b/fly.toml
@@ -4,7 +4,8 @@
 #
 
 
-app = "reactivities-course"
+app = "app = "bf-reactivities"
+primary_region = "den""
 kill_signal = "SIGINT"
 kill_timeout = 5
 processes = []
