--- a/fly.toml
+++ b/fly.toml
@@ -5,7 +5,7 @@
 
 
 app = "bf-reactivities"
-primary_region = "den""
+primary_region = "den"
 kill_signal = "SIGINT"
 kill_timeout = 5
 processes = []
